[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/sprites/enemies/eyesprites/eye1.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/enemies/eyesprites/eye2.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/enemies/eyesprites/eye3.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/enemies/eyesprites/eye.png" type="Texture" id=4]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=5]
[ext_resource path="res://assets/sprites/enemies/eyesprites/profile_eye2.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/enemies/eyesprites/profile_eye3.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/enemies/eyesprites/profile_eye1.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/enemies/eyesprites/profile_eye.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": false,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "profile",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 7.0

[sub_resource type="CircleShape2D" id=3]
radius = 7.0

[node name="Eye_enemy" type="KinematicBody2D"]
collision_layer = 25
collision_mask = 25
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Blink" type="Timer" parent="."]
wait_time = 3.523
autostart = true

[node name="Eye_enemy" type="Area2D" parent="."]
collision_layer = 26
collision_mask = 26

[node name="CollisionShape2D" type="CollisionShape2D" parent="Eye_enemy"]
shape = SubResource( 3 )

[node name="RayHinge" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="RayHinge"]
position = Vector2( 0, 8 )
enabled = true
cast_to = Vector2( 0, 70 )
collide_with_areas = true

[node name="RayCast2D2" type="RayCast2D" parent="RayHinge"]
position = Vector2( 8, 0 )
enabled = true
cast_to = Vector2( 70, 0 )
collide_with_areas = true

[node name="RayCast2D3" type="RayCast2D" parent="RayHinge"]
position = Vector2( 0, -8 )
enabled = true
cast_to = Vector2( 0, -70 )
collide_with_areas = true

[node name="RayCast2D4" type="RayCast2D" parent="RayHinge"]
position = Vector2( -8, 0 )
enabled = true
cast_to = Vector2( -70, 0 )
collide_with_areas = true
[connection signal="timeout" from="Blink" to="." method="_on_Blink_timeout"]
[connection signal="area_entered" from="Eye_enemy" to="." method="_on_Enemy_area_entered"]
